Fixed bug preventing side menu from opening on iOS devices and added mobile aesthetic changes.

--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -7,3 +7,19 @@
     padding: 15px;
     margin-left: 5%;
 }
+@media (max-width: 992px){
+	div.card-content > p{
+		text-align: center;
+		width: 100%;
+		margin: 0 auto;
+		padding: 5%;
+	}
+
+	.card-action a{
+		width: 100%;
+		margin-right: 0 !important;
+	}
+	.card-horizontal{
+		overflow-y: hidden;
+	}
+}
