--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -1,7 +1,3 @@
 .card .card-content{
-	max-height: 50vh;
 	overflow-y: scroll;
-}
-@media (max-width: 992px){
-
 }
