--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -184,16 +184,24 @@ header, main, footer {
 		font-size: 1.1rem;
 	}
 	div.card .card-image img{
-		top: 50px;
-		padding: 5px
+		padding: 10px;
 	}
 	.flash-message{
-		
-margin-left: 0;
-		
-font-size: 1.2rem;
-		
-text-align: center;
+				
+		margin-left: 0;
+				
+		font-size: 1.2rem;
+				
+		text-align: center;
 	}
-	
+	.z-depth-1, nav, .card-panel, .card, .toast, .btn, .btn-large, .btn-floating, .dropdown-content, .collapsible, .side-nav{
+		box-shadow: 0 2px 2px 0 rgba(0,0,0,0.33), 0 1px 5px 0 rgba(0,0,0,0.33), 0 3px 1px -2px rgba(0,0,0,0.33) !important;
+	}
+	div.card .card-content{
+		padding: 0;
+		margin-right: -30px;
+		padding-right: 30px;
+		overflow-x: hidden;
+
+	}
 }
